# NoteSearch

./: .gitignore  CMakeLists.txt  README.md
data/: SomeStuff.txt  notes1.txt  notes2.txt
include/: DocxParser.h  Indexer.h  SearchEngine.h  Tokenizer.h
src/: DocxParser.cpp  Indexer.cpp  SearchEngine.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
test_docs/: advanced_topics.txt  intro_notes.txt  lecture_summary.md  review_sheet.txt  todo.md
